2004-08-23  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes: Update from NetBSD CVS.

2004-07-16  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-07-05  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-06-07  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-06-02  Joseph S. Myers  <jsm@polyomino.org.uk>

	* hack/hack.6.in: Update from NetBSD CVS.

2004-05-24  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes: Update from NetBSD CVS.

2004-05-20  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-05-02  Joseph S. Myers  <jsm@polyomino.org.uk>

	* rain/rain.c: Update from NetBSD CVS.
	* exec.objs: Update.

2004-04-30  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-04-24  Joseph S. Myers  <jsm@polyomino.org.uk>

	* backgammon/common_source/fancy.c, fortune/datfiles/farber:
	Update from NetBSD CVS.

2004-04-12  Joseph S. Myers  <jsm@polyomino.org.uk>

	* phantasia/fight.c, phantasia/gamesupport.c,
	phantasia/interplayer.c, phantasia/io.c, phantasia/main.c,
	phantasia/misc.c: Update from NetBSD CVS.

2004-04-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* mille/move.c, phantasia/fight.c, phantasia/gamesupport.c,
	phantasia/include.h, phantasia/interplayer.c, phantasia/io.c,
	phantasia/main.c, phantasia/misc.c, phantasia/phantstruct.h,
	phantasia/setup.c, worms/worms.c, wtf/acronyms, wtf/acronyms.comp:
	Update from NetBSD CVS.

2004-03-29  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes2, fortune/datfiles/fortunes2-o.real,
	hack/data, hack/rumors: Update from NetBSD CVS.

2004-03-27  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-03-12  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.
